--- a/src/styleSheets/index.scss
+++ b/src/styleSheets/index.scss
@@ -6,7 +6,7 @@
 
 @import 'circles';
 @import 'shufflers';
-
+@import 'page-style';
 
 //And now for some highly specific overrides:
 #about-me-circle{
